...
    }
  };

  const RenderSelectedToken = useCallback(() => {
    return (
      <CyDTouchView
        testID='fundcard-token-selector'
        className={
          'bg-n0 py-[6px] px-[16px] my-[16px] border-[1px] border-n40 rounded-[34px] self-center'
        }
        onPress={() => setIsChooseTokenVisible(true)}>
        <CyDView className={'flex flex-row justify-center items-center'}>
          {selectedToken && (
...
              title={t('SETUP_AUTO_LOAD')}
              style={clsx('h-[60px] w-[45%] mb-[18px] py-[10px]', {
                'py-[8px]': loading,
              })}
            />
            <Button
              testID='fundcard-quote-btn'
              onPress={() => {
                if (validateAmount(amount)) {
                  void fundCard();
                }
              }}
              type={ButtonType.PRIMARY}
...
