...
          </CyDText>
        </CyDView> */}

        {/* Load Card Button */}
        <CyDView className='my-[32px]'>
          <Button
            title={t('Load Card')}
            type={ButtonType.PRIMARY}
            style='rounded-full'
            paddingY={14}
            onPress={() => {
              setIsModalVisible(false);
              onLoadCard();
...
