...
      IMPORT_WALLET: 'Import With Seed Phrase',
      BACK_UP_MYSELF: 'Back up myself',
      BACK_UP_SUB_MSG:
        'You will loose access to your wallet if you loose your private key. ',
      BACK_UP_MANUALLY: 'BACK UP MANUALLY',
      BACK_UP_ON_ICLOUD: 'BACK UP ON ICLOUD',
      IMPORT_WALLET_MSG: 'Import Wallet',
      IMPORT_WALLET_SUB_MSG:
        'Enter your 12 or 24 word seed phrase to import your wallet to Cypher.',
      ENTER_KEY_MANUALLY: 'ENTER KEY MANUALLY',
      IMPORT_KEY_FROM_ICLOUD: 'IMPORT KEY FROM ICLOUD',
      ENTER_SEED_PHRASE: 'Enter Seed Phrase',
      SUBMIT: 'SUBMIT',
...
      MEMO: 'Memo',
      SEND_TOKENS_MEMO: 'By Cypher Wallet',
      FUND_CARD_MEMO: 'By Cypher Wallet Card',
      IBC_WARNING:
        'Your are transferring your asset to another chain via IBC. It stays as the same token in the chain your transferring to.',
      APP_SETTINGS: 'App Settings',
      ADVANCED_SETTINGS: 'Advanced Settings',
      SEED_PHRASE: 'Seed Phrase',
      SEED_PHRASE_SUBTITLE:
        'The Seed Phrase gives full access to your wallet, funds and accounts. Cypher is a non-custodial wallet. You are the owner of your Seed Phrase.',
      PASTE_CLIPBOARD: 'Paste from clipboard',
      HIDE_SEED_PHRASE: 'Hide Seed Phrase',
      HIDE_PRIVATE_KEY: 'Hide Private Key',
...
      SSN_ALL_CAPS: 'SSN',
      PASSPORT_NO_INIT_CAPS: 'Passport Number',
      INVALID_USER_INPUT: 'Invalid User Input',
      PROMPT_FOR_VALID_CREDS_FOR_CARD:
        'Please validate your Date Of Birth, Address and ID Number',
      CONTACT_US_FOR_ASSISTANCE: 'Contact us for assistance',
      HOSTS_AND_RPC_INIT_CAPS: 'Hosts & RPC',
      HOSTS_ALL_CAPS: 'HOSTS',
      ARCH_ALL_CAPS: 'ARCH',
      PORTFOLIO_ALL_CAPS: 'PORTFOLIO',
      RPC_ENDPOINTS_ALL_CAPS: 'RPC ENDPOINTS',
      ETHEREUM_ALL_CAPS: 'ETHEREUM',
      RESTORE_DEFAULTS: 'RESTORE DEFAULTS',
...
      TERMS_CONDITIONS_DESC:
        'We have updated our terms and conditions. Please review and agree to our revised terms and conditions to proceed',
      AGGREE_CONTINUE: 'Agree & Continue',
      VIEW_TERMS_CONDITIONS: 'View Terms and Conditions',
      'AGREE_T&C':
        'I hereby confirm that I have read, understood, and fully agree to the terms and conditions outlined above.',
      OPTIONS: 'Options',
      MCC_PADDING_MESSAGE:
        'An extra ${{amount}} was charged to ensure a margin for transaction settlement. The unused amount will be refunded within {{days}} after settlement.',
      REFUND_DAYS_RANGE: '4 to 5 Business days',
      ACCOUNT_LOCKED: 'Account Locked',
      ACCOUNT_LOCKED_DESCRIPTION:
        'Your account has a negative balance. Add funds to restore card access.',
...
      CLAIM_THE_EARNED_CYPHER_TOKEN_STRAIGHT_TO_YOUR_WALLET:
        'Claim the earned cypher token straight to your wallet',
      YOUR_REWARDS_ARE_AVAILABLE_TO_CLAIM:
        'Your rewards are\navailable to claim',

      // Cypher Token Bottom Sheet translations
      CYPHER_TOKEN_TITLE: 'Cypher',
      CYPHER_TOKEN_SUBTITLE: 'Token',
      HOW_YOU_CAN_EARN_IT: 'How you can earn it',
      ON_PURCHASES: 'On Purchases',
      SPEND_USING_CYPHER_CARD_TO_EARN_TOKEN:
        'Spend using the cypher card to earn cypher token',
      CYPHER_TOKEN_REFERRALS: 'Referrals',
...
