...

  const Screen3 = useCallback((): JSX.Element => {
    return (
      <CyDView className='flex-1 w-full h-full bg-p100'>
        <CyDView className='flex-1 py-[20px] rounded-[25px] m-[12px] px-[20px]'>
          <CyDView className='mb-[20px]'>
            <CyDText className='text-[28px] font-extrabold'>Welcome to</CyDText>
            <CyDText className='text-[28px] font-extrabold'>
              Cypher Wallet
            </CyDText>
            <CyDText className='text-[16px] font-bold mt-[12px]'>
              Explore all of Web3 in one place
            </CyDText>
...
